# intern-platform

./: .gitignore  =3.1.0  CLAUDE.md  Makefile  PLANS.md  SCORING_CRITERIA.md  STRUCTURE.md  components.json  docker-compose.yml  index.html  package-lock.json  package.json  vite.config.js
backend/: .env.example  .gitignore  Dockerfile  alembic.ini  fix_database.sql  pyproject.toml  requirements.txt  test_scoring.py
backend/alembic/: env.py
backend/alembic/versions/: 001_create_initial_tables.py  002_add_processing_time.py  003_add_custom_rules_columns.py  004_add_batch_model.py
backend/app/: __init__.py  config.py  database.py  main.py
backend/app/models/: __init__.py  batch.py  submission.py  task.py
backend/app/routes/: __init__.py  batches.py  bulk_upload.py  submissions.py
backend/app/schemas/: __init__.py
backend/app/services/: __init__.py  ai_reviewer.py  batch_processor.py  bulk_upload.py  code_analyzer.py  commit_analyzer.py  deployment_checker.py  github_cache.py  pdf_extractor.py  queue_service.py  repo_cloner.py  scorer.py  websocket_manager.py
backend/app/utils/: __init__.py  logging_config.py  resilience.py
backend/app/workers/: __init__.py  scoring_worker.py  worker.py
backend/tests/: __init__.py  conftest.py
src/: index.css  main.jsx
src/components/batch/: BatchConfig.jsx  BatchResults.jsx  BatchTable.jsx  CSVImport.jsx  MultipleInputs.jsx  PDFToggleUpload.jsx
src/contexts/: NotificationContext.jsx
src/hooks/: useApi.jsx
src/layouts/: Layout.jsx
src/routes/: AppRouter.jsx
src/services/: api.js  batchService.js  scoringService.js
src/utils/: githubLink.js
(+70 files in other folders)
